# algo-trader

./: .gitignore  CMakeLists.txt  QUICKSTART.md  README.md
include/: agent.h  exchange.h  marketdata.h  utils.h
scripts/: build.bat  build.sh  validate_correctness.sh
src/: agent.cpp  exchange.cpp  main.cpp  marketdata.cpp  utils.cpp
tests/: test_suite.cpp
